--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,34 @@
-name: Node.js CI
+name: Deploy React App
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: ['20']
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: "20"  # Adjust if needed
+          cache: "npm"
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build --if-present
+      - name: Build React app
+        run: npm run build
 
-      - name: Clear contents of /var/www/html
+      - name: Clear existing files in /var/www/html
         run: sudo rm -rf /var/www/html/*
 
-      - name: Copy dist folder to /var/www/html
-        run: sudo cp -r dist/* /var/www/html/
+      - name: Copy build files to deployment folder
+        run: sudo cp -r build/* /var/www/html
+
+      - name: Restart web server (Optional)
+        run: sudo systemctl restart nginx  # Use Apache if needed
